[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-arch-viewer"
version = "0.1.0"
description = "Extract PyTorch model architecture from GitHub repos and render as an interactive node graph"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-node-editor>=0.3.2",
    "torch>=1.8",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sources*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
